# engi-rag

./: .gitignore  ingest.py  main.py  pyproject.toml  retrieve.py
faiss_index/: index.faiss  index.pkl
