[project]
name = "engi-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.2",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "python-dotenv>=1.2.2",
]
